      files in /usr/share/gnome/apps that caused the tag to never be
      issued.  Remove the check for /usr/share/applnk, since obsolete or
      not KDE appears to actively use it still.
    + [RA] Check for *.devhelp{2,} files not linked into devhelp's search
      path.  Based on a patch by Bradley Smith.  (Closes: #273309)
  * checks/infofiles:
    + [RA] Don't issue unknown-intepreter for maintainer scripts with
      weird interpreters.  checks/scripts already handles this and the tag
      wasn't defined.  Thanks, Thijs Kinkhorst.  (Closes: #460964)
    + [RA] Fix Perl warnings given a zero-byte maintainer script.  Thanks,
      Thijs Kinkhorst.  (Closes: #460966)
  * checks/init.d{.desc,}:
    + [RA] Downgrade a missing LSB Short-Description keyword to info since
      it's not required for functionality.  Thanks, Petter Reinholdtsen.
      (Closes: #460499)
  * checks/manpages{.desc,}:
    + [RA] Make hyphen-used-as-minus-sign more conservative to avoid false
      positives with non-ASCII text and catch hyphens at the start of
      lines.  Thanks, Michal Čihař.  (Closes: #459871)
    + [CW] Use man's new --warnings option to catch use of undefined
      strings, macros, or diversions in manual pages, which usually indicate
      mistaken use of "." or "'" at the start of a line. Requires man-db >=
      2.5.1-1.
  * checks/menu-format:
    + [RA] Avoid a Perl warning for desktop entries without Exec.
    + [RA] Fix a bug that prevented Exec keys in desktop files from being
      checked at all.  Thanks, Raphael Geissert.  (Closes: #462601)
    + [RA] Exempt packages providing the su wrappers from the check for
      using su-to-root.  Thanks, Raphael Geissert.
  * checks/menus:
    + [RA] Don't issue unknown-interpreter for maintainer scripts with
      weird interpreters.
    + [RA] Fix Perl warnings given a zero-byte maintainer script.
  * checks/po-debconf:
    + [RA] Exclude from not-using-po-debconf template files with only the